testdata/baselines/reference/submodule/conformance/jsDeclarationsTypedefPropertyAndExportAssignment.errors.txt
index.js(1,47): error TS2497: This module can only be referenced with ECMAScript imports/exports by turning on the 'esModuleInterop' flag and referencing its default export.
index.js(21,1): error TS2580: Cannot find name 'module'. Do you need to install type definitions for node? Try `npm i --save-dev @types/node`.
module.js(27,1): error TS2580: Cannot find name 'module'. Do you need to install type definitions for node? Try `npm i --save-dev @types/node`.


==== index.js (2 errors) ====
    const {taskGroups, taskNameToGroup} = require('./module.js');
                                                  ~~~~~~~~~~~~~
!!! error TS2497: This module can only be referenced with ECMAScript imports/exports by turning on the 'esModuleInterop' flag and referencing its default export.
    
    /** @typedef {import('./module.js').TaskGroup} TaskGroup */
    
    /**
     * @typedef TaskNode
     * @prop {TaskNode[]} children
     * @prop {TaskNode|undefined} parent
     * @prop {TaskGroup} group
     */
    
    /** @typedef {{timers: Map<string, TaskNode>}} PriorTaskData */
    class MainThreadTasks {
        /**
         * @param {TaskGroup} x
         * @param {TaskNode} y
         */
        constructor(x, y){}
    }
    
    module.exports = MainThreadTasks;
    ~~~~~~
!!! error TS2580: Cannot find name 'module'. Do you need to install type definitions for node? Try `npm i --save-dev @types/node`.
==== module.js (1 errors) ====
    /** @typedef {'parseHTML'|'styleLayout'} TaskGroupIds */
    
    /**
     * @typedef TaskGroup
     * @property {TaskGroupIds} id
     * @property {string} label
     * @property {string[]} traceEventNames
     */
    
    /**
     * @type {{[P in TaskGroupIds]: {id: P, label: string}}}
     */
    const taskGroups = {
        parseHTML: {
            id: 'parseHTML',
            label: 'Parse HTML & CSS'
        },
        styleLayout: {
            id: 'styleLayout',
            label: 'Style & Layout'
        },
    }
    
    /** @type {Object<string, TaskGroup>} */
    const taskNameToGroup = {};
    
    module.exports = {
    ~~~~~~
!!! error TS2580: Cannot find name 'module'. Do you need to install type definitions for node? Try `npm i --save-dev @types/node`.
        taskGroups,
        taskNameToGroup,
    };